# Quake

./: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
WinQuake/: Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  cb_8to24.h  common.c  configure  configure.in  d_copy.S  d_scan.c  dosasm.S  quakeasm.h  quakedef.h  r_surf.c  r_surf_armv6.c  snd_dma.c  snd_mix.c  snd_sdl.c  sound.h  sys_sdl.c  vid_sdl.c
WinQuake/armv6/: d_draw16_armv6.S  snd_mixa_armv6.S
